SERVER-37856 Fix coverity analysis defect 105090: Wrong operator used