src/mongo/db/write_concern.cpp
@@ -82,10 +82,10 @@ StatusWith<WriteConcernOptions> extractWriteConcern(OperationContext* opCtx,
 
     if (writeConcern.usedDefault && serverGlobalParams.clusterRole == ClusterRole::ConfigServer &&
         !opCtx->getClient()->isInDirectClient() &&
-        (opCtx->getClient()->session()->getTags() | transport::Session::kInternalClient)) {
+        (opCtx->getClient()->session()->getTags() & transport::Session::kInternalClient)) {
         // Upconvert the writeConcern of any incoming requests from internal connections (i.e.,
-        // from other nodes in the clustser) to "majority." This protects against internal code
-        // that does not specify writeConcern when writing to the config server.
+        // from other nodes in the cluster) to "majority." This protects against internal code that
+        // does not specify writeConcern when writing to the config server.
         writeConcern = {
             WriteConcernOptions::kMajority, WriteConcernOptions::SyncMode::UNSET, Seconds(30)};
     } else {
